--- a/01-web-crawler.ipynb
+++ b/01-web-crawler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "efbca54a",
+   "id": "ba77f49b",
    "metadata": {},
    "source": [
     "# 爬蟲程式介紹\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95647694",
+   "id": "d09b8554",
    "metadata": {},
    "source": [
     "## 範例：THE REPTILE DATABASE\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27556a35",
+   "id": "da722169",
    "metadata": {},
    "source": [
     "觀察首頁，首頁左方有個Data/downloads的連結。\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "015c67dc",
+   "id": "5e2c6190",
    "metadata": {},
    "source": [
     "發現可以在這邊下載到所有物種清單，是Excel格式\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "523697c0",
+   "id": "203e6544",
    "metadata": {},
    "source": [
     "通常網頁都有加javascript，js是在使用者端的瀏覽器裡執行的，可以製作一些網頁效果，或是延遲載入功能。但是如果今天是用程式來下載網頁的話，我們會下載到js的程式碼，但沒去執行js。\n",
@@ -72,14 +72,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74af8d23",
+   "id": "b8bd0441",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "c606c095",
+   "id": "195052df",
    "metadata": {},
    "source": [
     "我們需要用程式來解析出網頁中的圖片。\n",
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "161fb13a",
+   "id": "dbbf4fd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0c24e8ea",
+   "id": "785a606c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f97f7d18",
+   "id": "3079eef5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "11cd15b6",
+   "id": "47caf62b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9f298a6f",
+   "id": "fccbb023",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e7d4cf4d",
+   "id": "785c44ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2f8c2a02",
+   "id": "cdcc84c8",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3970a9f",
+   "id": "9a1535e8",
    "metadata": {},
    "source": [
     "如此一來，我們能夠從網頁中取得所有圖片的下載連結\n"
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe19b325",
+   "id": "007eee49",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6b8a1c23",
+   "id": "d083de94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4b815583",
+   "id": "cd4b32d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9c4b08ac",
+   "id": "aca64a3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "63de05d2",
+   "id": "20d26e37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8f5c4efc",
+   "id": "e111a1e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f9d1b4a2",
+   "id": "6e7692d0",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5e24286",
+   "id": "dc3459a6",
    "metadata": {},
    "source": [
     "如此一來，我們能夠下載單一物種的所有圖片了，接下來如果有所有物種的清單，我們就可以爬到所有物種的照片了。\n",
@@ -323,17 +323,17 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "0911d0b9",
+   "id": "9eae744d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install pandas"
+    "# !pip install pandas openpyxl"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "02ec01fb",
+   "id": "84bf0538",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "6f01df7c",
+   "id": "10f90c7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "78e2eac1",
+   "id": "4c7dfae0",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b6a1a0b5",
+   "id": "1005bd12",
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "fc516220",
+   "id": "886ee8e9",
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4f7e6b7",
+   "id": "5063eb7c",
    "metadata": {},
    "source": [
     "如此一來，我們可以從這個資料庫中過濾出所有烏龜類的學名，一共有356種。我們只要用for-loop去下載這356個物種，就可以載到很多照片了。"
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "fabbd9dd",
+   "id": "875e67e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b18a822",
+   "id": "8f3192be",
    "metadata": {},
    "source": [
     "下載完成的話，我們把每個物種的照片放在各自的資料夾中，資料夾的名稱就是該物種的學名。\n",
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33504403",
+   "id": "44464826",
    "metadata": {},
    "outputs": [],
    "source": []
